@@ -14,5 +14,4 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     mainClass = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
